# map_data

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CMakeLists.txt  README.md  check.py  index.html  mkdocs.yml  objects.inv  package.xml  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.cfg  setup.py  todo_fixes_plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
api/map_data/: index.html
api/pathsolver/: index.html
api/viewer_routes/: index.html
api/way/: index.html
config/: helhest.yaml  osm_grid.yaml  planner_defaults.yaml
data/: buchlovice_1.gpx  planned_path.gpx  stromovka.gpx
dev/: todo_items.json
dev/architecture/: index.html
dev/changelog/: index.html
dev/contributing/: index.html
dev/data_formats/: index.html
dev/planner_config/: index.html
dev/tag_configuration/: index.html
dev/testing/: index.html
dev/todo/: index.html
docs/: index.md  planning.md  troubleshooting.md  usage.md  viewer.md  viewer_planner.md  viewer_tracker.md  viewer_view.md
docs/api/: map_data.md  pathsolver.md  viewer_routes.md  way.md
docs/dev/: architecture.md  changelog.md  contributing.md  data_formats.md  planner_config.md  tag_configuration.md  testing.md  todo.md  todo_items.json
docs/stylesheets/: catppuccin.css
launch/: osm_cloud.launch  osm_cloud.launch.py
map_data/: __init__.py  background_map.py  create_mapdata.py  info.py  map_data.py  osm_cloud.py  osm_intersections.py  overpass.py  parsing.py  points_to_graph_points.py  serialization.py  vis_utils.py  visualize_mapdata.py  way.py
map_data/pathsolver/: astar.py  graph_planner.py  grid_astar.py  grid_constructor.py  replan.py  rrt_star.py  smoothing.py  visualizer.py
map_data/utils/: background_map.py  config.py  gpx.py  overpass.py  parsing.py  points_to_graph_points.py  serialization.py  vis_utils.py  way.py
map_data/viewer/: app.py  cache.py  helpers.py  ros_node.py  routes.py
map_data/viewer/static/css/: style.css
map_data/viewer/static/js/: api.js  draw_handlers.js  layers.js  map_setup.js  planner_mode.js  state.js  tracker_mode.js  ui_handlers.js  utils.js
map_data/viewer/templates/: index.html
planning/: index.html
scripts/: background_map.py  create_mapdata  main.py  map_data.py  osm_analysis.py  osm_cloud  path_planner.py  points_to_graph_points.py  test_map  test_path  vis_utils.py  visualize_map_data  visualize_map_data.py  visualize_mapdata  way.py
search/: search_index.json
src/map_data/: graph_search_params.py  map_data.py  points_to_graph_points.py  vis_utils.py  way.py
tests/: test_astar.py  test_core.py  test_errors.py  test_fill_grid.py  test_graph_planner.py  test_integration.py  test_launch.py  test_osm_cloud.py  test_overpass.py  test_parsing.py  test_rrt.py  test_smoothing.py  test_validate.py  test_viewer_helpers.py  test_viewer_routes.py
troubleshooting/: index.html
usage/: index.html
viewer/: index.html
viewer_planner/: index.html
viewer_tracker/: index.html
viewer_view/: index.html
