<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>map_data</name>
  <version>1.0.0</version>
  <description>Representation of OSM data for further work with ROS.</description>
  <url type="website">https://github.com/vras-robotour/map_data</url>

  <author email="herolada@fel.cvut.cz">Adam Herold</author>
  <author email="vlkjan6@fel.cvut.cz">Jan Vlk</author>
  <maintainer email="vlkjan6@fel.cvut.cz">Jan Vlk</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>geodesy</depend>

  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend condition="$ROS_DISTRO != noetic">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-gpxpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-overpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-shapely</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-utm-pip</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-numpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-scipy</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-matplotlib</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-tqdm</exec_depend>

  <exec_depend condition="$ROS_DISTRO == noetic">python3-rospkg</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-gpxpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-overpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-shapely</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-utm</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python3-scipy</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-matplotlib</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-tqdm</exec_depend>

</package>
