[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "map_data"
version = "1.1.0"
requires-python = ">=3.12"
dynamic = ["description", "license", "maintainers", "scripts"]
dependencies = [
    "flask",
    "flask-socketio",
    "gpxpy",
    "numpy",
    "overpy",
    "shapely",
    "utm",
    "tqdm",
    "requests",
    "PyYAML",
    "matplotlib",
    "scipy",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "B008", # do not perform function calls in default arguments (common in ROS)
]

[tool.ruff.lint.isort]
known-first-party = ["map_data"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
