[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "map_data"
version = "1.2.0"
# requires-python is intentionally NOT declared: colcon's ament_python build
# parses the setup() dump with ast.literal_eval, which chokes on the
# SpecifierSet object it produces. The Python 3.12+ floor is enforced by CI
# and documented in the README.
dynamic = ["description", "license", "maintainers", "scripts"]
dependencies = [
    "flask",
    "flask-socketio",
    "gpxpy",
    "numpy",
    "overpy",
    "shapely",
    "utm",
    "tqdm",
    "requests",
    "PyYAML",
    "matplotlib",
    "scipy",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "B008", # do not perform function calls in default arguments (common in ROS)
    "B905", # zip() without strict= — sliding-window pairs intentionally differ in length
]

[tool.ruff.lint.isort]
known-first-party = ["map_data"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
